(chores) camel-components: use unmodifiable lists when possible